--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -3,18 +3,9 @@
 {% block title %}Hello AccueilController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>D:/11_projet symfony/projet-sortir/src/Controller/AccueilController.php</code></li>
-        <li>Your template at <code>D:/11_projet symfony/projet-sortir/templates/accueil/index.html.twig</code></li>
-    </ul>
-</div>
+    <h1>voici les sorties. wow</h1>
+    {% for sortie in sorties %}
+        <h2>{{ sortie.nom }}</h2>
+    {% endfor %}
 {% endblock %}
