Ajout SecurityController et pages Login/Logout

--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Hello MainController!{% endblock %}
 
-{% block body %}
+{% block main %}
 
     <h2>Des sorties entre condisciples.</h2>
 
