--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,6 +12,39 @@
         {% endblock %}
     </head>
     <body>
-        {% block body %}{% endblock %}
+
+    <header>
+        <h1><img src="{{ asset('images/logo.png') }}" alt="Logo Nixflet">Nixflet</h1>
+
+        {% for status, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ status }}">{{ message }}</div>
+            {% endfor %}
+        {% endfor %}
+
+        <nav>
+            <ul>
+                <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
+                <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+{#                {% if is_granted('IS_AUTHENTICATED') %}#}
+{#                    <li><a href="{{ path('app_serie_liste') }}">Catalogue</a></li>#}
+{#                    {% if is_granted('ROLE_ADMIN') %}#}
+{#                        <li><a href="{{ path('app_serie_create') }}">Nouvelle série</a></li>#}
+{#                        <li><a href="{{ path('app_season_create') }}">Nouvelle saison</a></li>#}
+{#                    {% endif %}#}
+{#                    <li><a href="{{ path('app_logout') }}">Logout</a></li>#}
+{#                {% else %}#}
+{#                    <li><a href="{{ path('app_login') }}">Login</a></li>#}
+{#                    <li><a href="{{ path('app_register') }}">Register</a></li>#}
+{#                {% endif %}#}
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        {% block main %}{% endblock %}
+    </main>
+
     </body>
 </html>
