--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}Sortir{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
         {% block stylesheets %}
         {% endblock %}
@@ -14,7 +14,7 @@
     <body>
 
     <header>
-        <h1><img src="{{ asset('images/logo.png') }}" alt="Logo Nixflet">Nixflet</h1>
+        <h1><img src="{{ asset('images/logo.png') }}" alt="">Sortir</h1>
 
         {% for status, messages in app.flashes %}
             {% for message in messages %}
@@ -26,6 +26,7 @@
             <ul>
                 <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
                 <li><a href="{{ path('app_login') }}">Connexion</a></li>
+                <li><a href="{{ path('app_inscription') }}">Inscription</a></li>
                 <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
 {#                {% if is_granted('IS_AUTHENTICATED') %}#}
 {#                    <li><a href="{{ path('app_serie_liste') }}">Catalogue</a></li>#}
