Modification block body en block main et route accueil

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}{{ parent() }} | Accueil - Liste des Sorties{% endblock %}
 
-{% block body %}
+{% block main %}
     <div>
             <p>Participant: ---</p>
             <p>Date du jour: {{ today | date('d/m/Y') }}</p>
