--- a/templates/inscription/inscription.html.twig
+++ b/templates/inscription/inscription.html.twig
@@ -2,7 +2,7 @@
 
 {% block title %}Inscription{% endblock %}
 
-{% block body %}
+{% block main %}
     <h1>Inscription</h1>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
