--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -29,10 +29,11 @@
             <input type="checkbox" name="_remember_me" id="_remember_me">
             <label for="_remember_me">Remember me</label>
 
-
-            <button class="btn btn-lg btn-primary" type="submit">
-                Sign in
-            </button>
+            <div>
+                <button class="btn btn-lg btn-primary" type="submit">
+                    Se connecter
+                </button>
+            </div>
         </div>
     </form>
 {% endblock %}
