--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -15,8 +15,8 @@
         {% endif %}
 
         <h1 class="h3 mb-3 font-weight-normal">Connexion</h1>
-        <label for="username">Email</label>
-        <input type="email" value="{{ last_username }}" name="_username" id="username" class="form-control"
+        <label for="username">Nom d'utilisateur ou Email</label>
+        <input type="text" value="{{ last_username }}" name="_username" id="username" class="form-control"
                autocomplete="email" required autofocus>
         <label for="password">Mot de passe</label>
         <input type="password" name="_password" id="password" class="form-control" autocomplete="current-password"
@@ -27,7 +27,7 @@
 
         <div class="checkbox mb-3">
             <input type="checkbox" name="_remember_me" id="_remember_me">
-            <label for="_remember_me">Remember me</label>
+            <label for="_remember_me">Se souvenir de moi</label>
 
             <div>
                 <button class="btn btn-lg btn-primary" type="submit">
