WIP : Formulaire Créer une sortie

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -43,7 +43,7 @@
 
 
 <section>
-    <button>Créer une sortie</button>
+    <a href="{{ path('app_sortie_creer') }}" class="btn btn-primary">Créer une sortie</a>
 </section>
 
 
