Commentaire participant pour debug

--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block main %}
     <div>
-            <p>Participant·e: {{ app.user.pseudo }}</p>
+{#            <p>Participant·e: {{ app.user.pseudo }}</p>#}
             <p>Date du jour: {{ today | date('d/m/Y') }}</p>
     </div>
 
