--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,51 +1,46 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Sortir{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Sortir{% endblock %}</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
+    {% block stylesheets %}
+    {% endblock %}
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
+    {% block javascripts %}
+        {% block importmap %}{{ importmap('app') }}{% endblock %}
+    {% endblock %}
+</head>
+<body>
 
-    <header>
-        <h1><img src="{{ asset('images/logo.png') }}" alt="">Sortir</h1>
+<header>
+    <h1><img src="{{ asset('images/logo.png') }}" alt="">Sortir</h1>
 
-        {% for status, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="alert alert-{{ status }}">{{ message }}</div>
-            {% endfor %}
+    {% for status, messages in app.flashes %}
+        {% for message in messages %}
+            <div class="alert alert-{{ status }}">{{ message }}</div>
         {% endfor %}
+    {% endfor %}
 
-        <nav>
-            <ul>
-                <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
+    <nav>
+        <ul>
+            <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
+            {% if is_granted('IS_AUTHENTICATED') %}
+                {% if is_granted('ROLE_ADMIN') %}
+
+                {% endif %}
+                <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
+            {% else %}
                 <li><a href="{{ path('app_login') }}">Connexion</a></li>
                 <li><a href="{{ path('app_inscription') }}">Inscription</a></li>
-                <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
-{#                {% if is_granted('IS_AUTHENTICATED') %}#}
-{#                    <li><a href="{{ path('app_serie_liste') }}">Catalogue</a></li>#}
-{#                    {% if is_granted('ROLE_ADMIN') %}#}
-{#                        <li><a href="{{ path('app_serie_create') }}">Nouvelle série</a></li>#}
-{#                        <li><a href="{{ path('app_season_create') }}">Nouvelle saison</a></li>#}
-{#                    {% endif %}#}
-{#                    <li><a href="{{ path('app_logout') }}">Logout</a></li>#}
-{#                {% else %}#}
-{#                    <li><a href="{{ path('app_login') }}">Login</a></li>#}
-{#                    <li><a href="{{ path('app_register') }}">Register</a></li>#}
-{#                {% endif %}#}
-            </ul>
-        </nav>
-    </header>
+            {% endif %}
+        </ul>
+    </nav>
+</header>
 
-    <main>
-        {% block main %}{% endblock %}
-    </main>
+<main>
+    {% block main %}{% endblock %}
+</main>
 
-    </body>
+</body>
 </html>
