--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,7 @@
         <ul>
             <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
             {% if is_granted('IS_AUTHENTICATED') %}
-                <li><a href="{{ path('app_profil') }}">Profil</a></li>
+                <li><a href="{{ path('app_profil_detail') }}">Profil</a></li>
 
                 {% if is_granted('ROLE_ADMIN') %}
                     <li><a href="{{ path('app_inscription') }}">Ajouter un membre</a></li>
