--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -16,7 +16,7 @@
 
     {% if app.user and app.user.id == participant.id %}
 
-        <a href="{{ path('app_profil_edit', { id: participant.id }) }}">Modifier mon profil</a>
+        <a href="{{ path('app_profil_edit', { id: participant.id }) }}" class="btn btn-primary">Modifier mon profil</a>
     {% endif %}
 
 {% endblock %}
