--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% form_theme profil_form 'bootstrap_5_layout.html.twig' %}
+
 {% block title %}{{ parent()}}{% endblock %}
 
 {% block main %}
@@ -7,7 +9,7 @@
     <h2>Modifier mon profil [{{ app.user.pseudo }}]</h2>
 
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="col-12 col-md-3">
 
             {{ form_errors(profil_form) }}
             {{ form_start(profil_form) }}
