--- a/templates/profil/profil.html.twig
+++ b/templates/profil/profil.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello ProfilController!{% endblock %}
+{% block title %}{{ parent() }}{% endblock %}
 
 {% block main %}
 
@@ -23,7 +23,6 @@
     </div>
 
     {% if app.user and app.user.id == participant.id %}
-
         <a href="{{ path('app_profil_edit', { id: participant.id }) }}" class="btn btn-primary">Modifier mon profil</a>
     {% endif %}
 
