--- a/templates/sortie/edit.html.twig
+++ b/templates/sortie/edit.html.twig
@@ -1,7 +1,24 @@
 {% extends 'base.html.twig' %}
 
+{% form_theme sortie_form 'bootstrap_5_layout.html.twig' %}
+
+
 {% block title %}{{ parent() }} | Créer une sortie{% endblock %}
 
 {% block main %}
-    {{ form(sortie_form) }}
+
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-3">
+
+            {{ form_errors(sortie_form) }}
+            {{ form_start(sortie_form) }}
+            {{ form_widget(sortie_form) }}
+            <div class="text-center">
+                <button class="btn btn-primary">Créer</button>
+            </div>
+            {{ form_end(sortie_form) }}
+
+        </div>
+    </div>
+
 {% endblock %}
