--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,16 @@
+@import url('_header.css');
+@import url('_footer.css');
+
+:root {
+    --header-h: 88px;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+}
+
 body {
     background-size: cover;
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('../images/BG_synthwave_landscape_cc0.png') fixed center center;
@@ -30,6 +43,13 @@ nav li a {
 }
 
 main {
-    padding: 1.5rem;
+    color : white;
+    padding: 1rem;
+    min-height: calc(100dvh - var(--header-h));
 }
+
+main h2, main h1{
+    text-align:center;
+}
+
 
