--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -6,59 +6,62 @@
 
 {% block main %}
     <div>
-            {% if participant != null %}
+        {% if participant != null %}
             <p>Participant·e: {{ participant.pseudo }}</p>
-            {% endif %}
-            <p>Date du jour: {{ today | date('d/m/Y') }}</p>
+        {% endif %}
+        <p>Date du jour: {{ today | date('d/m/Y') }}</p>
     </div>
 
-<section>
-    <h2>Filtrer les sorties</h2>
+    <section>
+        <h2>Filtrer les sorties</h2>
 
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-3">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-3">
 
-            {{ form_errors(tri_form) }}
-            {{ form_start(tri_form) }}
-            {{ form_widget(tri_form) }}
-            {{ form_end(tri_form) }}
+                {{ form_errors(tri_form) }}
+                {{ form_start(tri_form) }}
+                {{ form_widget(tri_form) }}
+                {{ form_end(tri_form) }}
 
+            </div>
         </div>
-    </div>
 
-</section>
+    </section>
 
-<section>
-<table>
-    <tr class="table table-dark">
-        <th scope="col">Nom de la sortie</th>
-        <th scope="col">Date de la sortie</th>
-        <th scope="col">Clôture</th>
-        <th scope="col">Inscrits/Places</th>
-        <th scope="col">Etat</th>
-        <th scope="col">Inscrit·e</th>
-        <th scope="col">Organisateur·ice</th>
-        <th scope="col">Actions</th>
-    </tr>
-    {% for sortie in sorties %}
-        <tr>
-            <th>{{ sortie.nom }}</th>
-            <th>{{ sortie.dateDebut | date('d/m/Y') }}</th>
-            <th>{{ sortie.dateCloture | date('d/m/Y') }}</th>
-            <th>{{ sortie.participants.count }} / {{ sortie.nbInscriptionsMax }}</th>
-            <th>{{ sortie.etat.libelle }}</th>
-            <th>TODO: CET UTILISATEUR EST INSCRIT</th>
-            <th>{{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom|first|upper }}</th>
-            <th>TODO: actions selon si admin/organisateur...</th>
-        </tr>
-    {% endfor %}
-</table>
-</section>
+    <section>
+        <table class="table table-dark table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Nom de la sortie</th>
+                <th scope="col">Date de la sortie</th>
+                <th scope="col">Clôture</th>
+                <th scope="col">Inscrits/Places</th>
+                <th scope="col">Etat</th>
+                <th scope="col">Inscrit·e</th>
+                <th scope="col">Organisateur·ice</th>
+                <th scope="col">Actions</th>
+            </tr>
+            </thead>
+
+            {% for sortie in sorties %}
+                <tr>
+                    <td>{{ sortie.nom }}</td>
+                    <td>{{ sortie.dateDebut | date('d/m/Y') }}</td>
+                    <td>{{ sortie.dateCloture | date('d/m/Y') }}</td>
+                    <td>{{ sortie.participants.count }} / {{ sortie.nbInscriptionsMax }}</td>
+                    <td>{{ sortie.etat.libelle }}</td>
+                    <td>TODO: CET UTILISATEUR EST INSCRIT</td>
+                    <td>{{ sortie.organisateur.prenom }} {{ sortie.organisateur.nom|first|upper }}</td>
+                    <td>TODO: actions selon si admin/organisateur...</td>
+                </tr>
+            {% endfor %}
+        </table>
+    </section>
 
 
-<section>
-    <a href="{{ path('app_sortie_creer') }}" class="btn btn-primary">Créer une sortie</a>
-</section>
+    <section>
+        <a href="{{ path('app_sortie_creer') }}" class="btn btn-primary">Créer une sortie</a>
+    </section>
 
 
 
