--- a/assets/styles/_header.css
+++ b/assets/styles/_header.css
@@ -26,7 +26,7 @@ header {
 }
 
 @keyframes vaporwave {
-    0% { background-position: 0% 50%; }
+    0% { background-position: 0 50%; }
     50% { background-position: 100% 50%; }
-    100% { background-position: 0% 50%; }
+    100% { background-position: 0 50%; }
 }
