--- a/templates/inscription/inscription.html.twig
+++ b/templates/inscription/inscription.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Inscription{% endblock %}
 
 {% block main %}
-    <h1>Inscription</h1>
+    <h2>Ajouter un utilisateur</h2>
     <div class="row justify-content-center">
         <div class="col-12 col-md-6">
 
