--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -12,11 +12,16 @@
         <ul>
             <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
             {% if is_granted('IS_AUTHENTICATED') %}
-                <li><a href="{{ path('app_profil_detail') }}">Profil</a></li>
-
                 {% if is_granted('ROLE_ADMIN') %}
-                    <li><a href="{{ path('app_admin_inscription') }}">Ajouter un membre</a></li>
+                    <li><a href="{{ path('app_admin_ville') }}">[Villes]</a></li>
+                    <li><a href="{{ path('app_admin_site') }}">[Sites]</a></li>
+                    <li><a href="{{ path('app_admin_inscription') }}">[Inscription]</a></li>
                 {% endif %}
+                <li>{% if app.user %}
+                        <a href="{{ path('app_profil_detail', { id: app.user.id }) }}">
+                            Profil
+                        </a>
+                    {% endif %}</li>
                 <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
             {% else %}
                 <li><a href="{{ path('app_login') }}">Connexion</a></li>
