--- a/templates/admin/ville.html.twig
+++ b/templates/admin/ville.html.twig
@@ -5,4 +5,38 @@
 {% block main %}
     <h2>Gérer les villes</h2>
 
+    <section>
+        <table class="table table-dark table-striped">
+            <thead>
+            <tr>
+                <th scope="col">Ville</th>
+                <th scope="col">Code Postal</th>
+                <th scope="col">Actions</th>
+            </tr>
+            </thead>
+            {{ form_errors(villes_form) }}
+            {% for ville in villes %}
+                <tr>
+                    <td>{{ ville.nom }}</td>
+                    <td>{{ ville.cpo }}</td>
+                    <td>TODO: actions selon si admin/organisateur...</td>
+                </tr>
+            {% endfor %}
+            {{ form_start(villes_form) }}
+                <tr>
+                    <td>
+                        {{ form_row(villes_form.nom) }}
+                    </td>
+                    <td>
+                        {{ form_row(villes_form.cpo) }}
+                    </td>
+                    <td>
+                        {{ form_row(villes_form.submit) }}
+                    </td>
+                </tr>
+            {{ form_rest(villes_form) }}
+            {{ form_end(villes_form) }}
+        </table>
+    </section>
+
 {% endblock %}
