--- a/templates/sortie/edit.html.twig
+++ b/templates/sortie/edit.html.twig
@@ -11,7 +11,7 @@
             {{ form_start(sortie_form) }}
             {{ form_widget(sortie_form) }}
             <div class="text-center">
-                <button class="btn btn-primary">Créer la sortie</button>
+                <button class="btn btn-primary">Valider</button>
             </div>
             {{ form_end(sortie_form) }}
 
