--- a/templates/admin/ville.html.twig
+++ b/templates/admin/ville.html.twig
@@ -1,10 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Gérer les Ville{% endblock %}
+{% block title %}Gérer les Villes{% endblock %}
 
 {% block main %}
     <h2>Gérer les villes</h2>
 
+    <section>
+        {{ form_errors(search_form) }}
+        {{ form_start(search_form) }}
+        {{ form_end(search_form) }}
+    </section>
     <section>
         <table class="table table-dark table-striped">
             <thead>
@@ -19,7 +24,8 @@
                 <tr>
                     <td>{{ ville.nom }}</td>
                     <td>{{ ville.cpo }}</td>
-                    <td>TODO: actions selon si admin/organisateur...</td>
+                    <td><a href="{{ path('app_admin_ville_update', {id: ville.id}) }}">Modifier</a> - <a href="{{ path('app_admin_ville_delete', { id: ville.id, token: csrf_token('ville_delete' ~ ville.id) }) }}"
+                        onclick="return confirm('Etes vous sur de vouloir supprimer cette ville?')">Supprimer</a></td>
                 </tr>
             {% endfor %}
             {{ form_start(villes_form) }}
