--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -35,8 +35,8 @@
                 <th scope="col">Nom de la sortie</th>
                 <th scope="col">Date de la sortie</th>
                 <th scope="col">Clôture</th>
-                <th scope="col">Inscrits/Places</th>
-                <th scope="col">Etat</th>
+                <th scope="col">Inscrits</th>
+                <th scope="col">État</th>
                 <th scope="col">Inscrit·e</th>
                 <th scope="col">Organisateur·ice</th>
                 <th scope="col">Actions</th>
@@ -46,7 +46,8 @@
             {% for sortie in sorties %}
                 <tr>
                     <td>
-                        <a href="{{ path('app_sortie_detail', { id: sortie.id }) }}" class="btn btn-primary">{{ sortie.nom }}</a>
+                        <a href="{{ path('app_sortie_detail', { id: sortie.id }) }}"
+                           class="btn btn-primary">{{ sortie.nom }}</a>
                     </td>
                     <td>{{ sortie.dateDebut | date('d/m/Y') }}</td>
                     <td>{{ sortie.dateCloture | date('d/m/Y') }}</td>
@@ -65,15 +66,18 @@
                         </a>
                     </td>
                     <td>
-                        {#                        TODO: actions selon si admin/organisateur... #}
-
-                        {% if not(app.user.sorties.contains(sortie)) %}
-                            <a href="">Inscription</a>
+                        {% if not(app.user.pseudo == sortie.organisateur.pseudo) %}
+                            {% if not(app.user.sorties.contains(sortie)) %}
+                                <a href="{{ path('app_sortie_inscription', { id: sortie.id }) }}"
+                                   onclick="return confirm('Confirmer l\'inscription ?')">S'inscrire</a>
+                            {% else %}
+                                <a href="">Me désinscrire</a>
+                            {% endif %}
                         {% else %}
-                            <a href="">Me désinscrire</a>
+                            <a href="{{ path('app_sortie_edit', { id: sortie.id }) }}">Modifier</a>
+                            <a href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
+                               onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a>
                         {% endif %}
-
-
                     </td>
                 </tr>
             {% endfor %}
