--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -27,12 +27,16 @@
         <div class="checkbox mb-3">
             <input type="checkbox" name="_remember_me" id="_remember_me">
             <label for="_remember_me">Se souvenir de moi</label>
+        </div>
+
+        <div class="mb-3">
+            <a href="{{ path('app_forgot_password_request') }}">Mot de passe oublié ?</a>
+        </div>
 
             <div>
                 <button class="btn btn-lg btn-primary" type="submit">
                     Se connecter
                 </button>
             </div>
-        </div>
     </form>
 {% endblock %}
