edit & delete ville

--- a/templates/admin/ville.html.twig
+++ b/templates/admin/ville.html.twig
@@ -37,7 +37,7 @@
                         {{ form_row(villes_form.cpo) }}
                     </td>
                     <td>
-                        {{ form_row(villes_form.submit) }}
+                        {{ form_row(villes_form.submit, { 'label': 'Ajouter' }) }}
                     </td>
                 </tr>
             {{ form_rest(villes_form) }}
