--- a/templates/profil/edit.html.twig
+++ b/templates/profil/edit.html.twig
@@ -2,7 +2,7 @@
 
 {% form_theme profil_form 'bootstrap_5_layout.html.twig' %}
 
-{% block title %}{{ parent()}}{% endblock %}
+{% block title %}{{ parent()}} | Modifier mon profil{% endblock %}
 
 {% block main %}
 
