--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -54,7 +54,12 @@ main h2, main h1, main h3, main h4{
 
 .liens-participants-inscrits{
     text-align:center;
+}
 
+.alert-box {
+    margin: 1rem auto;
+    width: fit-content;
+    text-align: center;
 }
 
 
