--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -13,23 +13,25 @@
     </div>
 
     <section>
-        <h2>Filtrer les sorties</h2>
 
         <div class="row justify-content-center">
-            <div class="col-12 col-md-3">
-
-                {{ form_errors(tri_form) }}
-                {{ form_start(tri_form) }}
-                {{ form_widget(tri_form) }}
-                {{ form_end(tri_form) }}
-                <button class="btn btn-primary">TODO: EFFACER FILTRES</button>
+            <div class="card text-white bg-secondary mb-3" style="max-width: 30rem;">
+                <div class="card-body">
+                    <h4 class="card-title">Filtrer les sorties</h4>
+                        {{ form_errors(tri_form) }}
+                        {{ form_start(tri_form) }}
+                        {{ form_widget(tri_form) }}
+                        {{ form_end(tri_form) }}
+                </div>
             </div>
         </div>
+
+
 
     </section>
 
     <section>
-        <table class="table table-dark table-striped">
+        <table class="table">
             <thead>
             <tr>
                 <th scope="col">Nom de la sortie</th>
@@ -47,10 +49,10 @@
             </thead>
 
             {% for sortie in sorties %}
-                <tr>
+                <tr class="table-primary">
                     <td>
                         <a href="{{ path('app_sortie_detail', { id: sortie.id }) }}"
-                           class="btn btn-primary">{{ sortie.nom }}</a>
+                           class="btn btn-info">{{ sortie.nom }}</a>
                     </td>
                     <td>{{ sortie.dateDebut | date('d/m/Y') }}</td>
                     <td>{{ sortie.dateCloture | date('d/m/Y') }}</td>
@@ -71,22 +73,26 @@
                     <td>
                         {% if not(app.user.pseudo == sortie.organisateur.pseudo) %}
                             {% if not(app.user.sorties.contains(sortie)) %}
-                                <a class="btn btn-success" href="{{ path('app_sortie_inscription', { id: sortie.id }) }}"
+                                <a class="btn btn-success"
+                                   href="{{ path('app_sortie_inscription', { id: sortie.id }) }}"
                                    onclick="return confirm('Confirmer l\'inscription ?')">S'inscrire</a>
                             {% else %}
-                                <a class="btn btn-warning" href="{{ path('app_sortie_desinscription', { id: sortie.id }) }}"
+                                <a class="btn btn-secondary"
+                                   href="{{ path('app_sortie_desinscription', { id: sortie.id }) }}"
                                    onclick="return confirm('Vous êtes sur le point d\'annuler votre inscription à cette sortie. Confirmer ?')">Me
                                     désinscrire</a>
                             {% endif %}
                         {% else %}
-                            <a class="btn btn-warning" href="{{ path('app_sortie_edit', { id: sortie.id }) }}">Modifier</a>
-                            <a class="btn btn-warning" href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
+                            <a class="btn btn-secondary" href="{{ path('app_sortie_edit', { id: sortie.id }) }}">Modifier</a>
+                            <a class="btn btn-secondary"
+                               href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
                                onclick="return confirm('Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a>
                         {% endif %}
                     </td>
                     {% if is_granted('ROLE_ADMIN') %}
                         <td>
-                            <a class="btn btn-danger" href="{{ path('app_sortie_edit', { id: sortie.id }) }}">Modifier</a>
+                            <a class="btn btn-danger"
+                               href="{{ path('app_sortie_edit', { id: sortie.id }) }}">Modifier</a>
                             <a class="btn btn-danger"
                                href="{{ path('app_sortie_delete', { id: sortie.id, token: csrf_token('sortie_delete' ~ sortie.id) }) }}"
                                onclick="return confirm('[ADMINISTRATEUR] Êtes-vous sûr·e de vouloir supprimer cette sortie ?')">Supprimer</a>
