--- a/templates/inscription/inscription.html.twig
+++ b/templates/inscription/inscription.html.twig
@@ -3,19 +3,20 @@
 {% block title %}Inscription{% endblock %}
 
 {% block main %}
-    <h2>Ajouter un utilisateur</h2>
+
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
+        <div class="card text-white bg-info mb-3" style="max-width: 30rem;">
+            <div class="card-body">
+                <h4 class="card-title">Ajouter un utilisateur</h4>
 
-            {{ form_errors(inscription_form) }}
-            {{ form_start(inscription_form) }}
-            {{ form_widget(inscription_form) }}
-            <div class="text-center">
-                <button class="btn btn-primary">Enregistrer</button>
+                {{ form_errors(inscription_form) }}
+                {{ form_start(inscription_form) }}
+                {{ form_widget(inscription_form) }}
+                <div class="text-center">
+                    <button class="btn btn-primary">Enregistrer</button>
+                </div>
+                {{ form_end(inscription_form) }}
             </div>
-            {{ form_end(inscription_form) }}
-
-
         </div>
     </div>
 {% endblock %}
