--- a/templates/part/_header.html.twig
+++ b/templates/part/_header.html.twig
@@ -1,25 +1,48 @@
-
 <header>
-    <h1><img src="{{ asset('images/logo.png') }}" alt="">Sortir</h1>
 
-    <nav>
-        <ul>
-            <li><a href="{{ path('app_accueil') }}">Accueil</a></li>
-            {% if is_granted('IS_AUTHENTICATED') %}
-                {% if is_granted('ROLE_ADMIN') %}
-                    <li><a href="{{ path('app_admin_ville') }}">[Villes]</a></li>
-                    <li><a href="{{ path('app_admin_site') }}">[Sites]</a></li>
-                    <li><a href="{{ path('app_admin_inscription') }}">[Inscription]</a></li>
-                {% endif %}
-                <li>{% if app.user %}
-                        <a href="{{ path('app_profil_detail', { id: app.user.id }) }}">
-                            Profil
-                        </a>
-                    {% endif %}</li>
-                <li><a href="{{ path('app_logout') }}">Déconnexion</a></li>
-            {% else %}
-                <li><a href="{{ path('app_login') }}">Connexion</a></li>
-            {% endif %}
-        </ul>
+    <nav class="navbar navbar-expand-lg bg-light" data-bs-theme="light">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{{ path('app_accueil') }}">Sortir</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01"
+                    aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarColor01">
+                <ul class="navbar-nav me-auto">
+
+                    <li class="nav-item"><a class="nav-link" href="{{ path('app_accueil') }}">Accueil</a></li>
+
+                    {% if is_granted('IS_AUTHENTICATED') %}
+                        {% if app.user %}
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('app_profil_detail', { id: app.user.id }) }}">
+                                    Profil
+                                </a>
+                            </li>
+                        {% endif %}
+
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a></li>
+
+                    {% else %}
+                        <li class="nav-item"><a class="nav-link" href="{{ path('app_login') }}">Connexion</a></li>
+                    {% endif %}
+
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                               aria-haspopup="true" aria-expanded="false">Administrer</a>
+                            <div class="dropdown-menu">
+                                {% if is_granted('ROLE_ADMIN') %}
+                                <a class="dropdown-item" href="{{ path('app_admin_ville') }}">Villes</a>
+                                <a class="dropdown-item" href="{{ path('app_admin_site') }}">Sites</a>
+                                <a class="dropdown-item" href="{{ path('app_admin_inscription') }}">Inscriptions</a>
+                                {% endif %}
+                            </div>
+                        </li>
+
+                </ul>
+
+            </div>
+        </div>
     </nav>
 </header>
